--- a/estilos.css
+++ b/estilos.css
@@ -2,73 +2,95 @@ a
 {
 	color: #22BCE0;
 }
-
 body
 {
-	background: #EEEEEE;
+	background: #EEEEEE;	
 	font-family: arial;
 	font-size: 16px;
+}
+footer
+{
+	background: #22BCE0;
+	color: rgba(255,255,255,0.7);
+	padding: 1em;
+	text-align: center;
+}
+footer p:first-child
+{
+	
+	margin-bottom: 0;
+}
+footer p:last-child
+{
+	
+	margin-top: 0;
+}
+footer p:last-child:after
+{
+	content: "-"
+}
+footer p:last-child:before
+{
+	content: "-"
 }
 header
 {
 	background: #343B54;
 	color: white;
 	overflow: hidden;
-	padding: 0.5em;
 	position: relative;
 }
-
-header figure
+header figure 
 {
 	float: left;
 }
-
 header h1
 {
 	font-size: 1.2em;
 	font-weight: normal;
 	margin: 0 70px 0 0;
 }
-
-header #avatar
+header #avatar 
 {
 	margin: 0.5em 0.5em 0 0;
 	position: absolute;
 	right: 0;
-	top:  0;
+	top: 0;
 }
-
 header #avatar img
 {
-	border-right: 0.5em;
+	border-radius: 50%;
 	width: 55px;
 }
-
 header #logo img
 {
 	border-right: 1px solid white;
 	padding-right: 0.5em;
-	margin-right:  0.5em;
-	width: 52px; 
+	margin-right: 0.5em; 
+	width: 52px;
 }
-
 nav
 {
 	background: #80BCA3;
 	position: relative;
 }
+nav ul
+{
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
 nav ul li
 {
 	display: inline-block;
-	margin: 0 0.5em 0 0;
+	margin: 0 1em 0 0;
 }
-
 nav ul li a
 {
 	color: white;
+	text-decoration: none;
 	display: block;
 	padding: 0.5em;
-	text-decoration: none;
 }
 nav ul #publicar_nav
 {
@@ -94,7 +116,7 @@ nav ul #publicar_nav a
 	background: white;
 	border-bottom: 3px solid #22BCE0;
 	margin-bottom: 3em;
-	min-height: 128px;
+	min-height: 144px;
 	position: relative;
 }
 #contenido .item .autor_item
@@ -103,13 +125,12 @@ nav ul #publicar_nav a
 }
 #contenido .item .datos_item
 {
-	color: #AAA;
-	float: right;
+	margin: 1em 1em 0 0;
 }
 #contenido .item .datos_item .fecha_item
 {
-	color: #AAA;
 	float: right;
+	color: #AAA;
 }
 #contenido .item .datos_item .tag_item
 {
@@ -123,7 +144,7 @@ nav ul #publicar_nav a
 #contenido .item .imagen_item
 {
 	float: left;
-	margin-right: 1em;
+	margin-right: 0.5em;
 }
 #contenido .item .imagen_item img
 {
@@ -133,30 +154,40 @@ nav ul #publicar_nav a
 {
 	font-size: 1.2em;
 	font-style: italic;
-	margin-bottom: 0;
 	padding: 1em 1em 0 0;
 }
 #contenido .item .titulo_item a
 {
-	color: #444;
+	color: #151515;
 	text-decoration: none;
 }
 #contenido .item .votacion
 {
 	background: white;
 	border-radius: 0 0 0.5em 0.5em;
-	left: 3%;
-	margin-top: 3px;
-	padding: 0.5em 1em;
 	position: absolute;
+	margin-top: 3px;
+	padding: 0.2em 0.5em;
+	top:100%;
+	left: 3%;
 	right: 3%;
-	top: 100%; 
 }
-#contenido .item .votacion .comentarios_item;
-#contenido .item .votacion .guardar_item;
+#contenido .item .votacion .comentarios_item,
+#contenido .item .votacion .guardar_item
 {
 	float: right;
 }
+
+
+
+
+
+
+
+
+
+
+
 
 
 
