--- a/estilos.css
+++ b/estilos.css
@@ -1,3 +1,58 @@
+
+/*@font-face {
+    font-family: 'open_sansregular';
+    src: url('OpenSans-Regular-webfont.eot');
+    src: url('OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('OpenSans-Regular-webfont.woff') format('woff'),
+         url('OpenSans-Regular-webfont.ttf') format('truetype'),
+         url('OpenSans-Regular-webfont.svg#open_sansregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}*/
+@font-face {
+	font-family: 'puls4';
+	src:url('fuentes/puls4.eot?qosnxc');
+	src:url('fuentes/puls4.eot?#iefixqosnxc') format('embedded-opentype'),
+		url('fuentes/puls4.woff?qosnxc') format('woff'),
+		url('fuentes/puls4.ttf?qosnxc') format('truetype'),
+		url('fuentes/puls4.svg?qosnxc#puls4') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+	font-family: 'puls4';
+	speak: none
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+
+	/* Better Font Rendering =========== */
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+.icon-f-arriba:before {
+	content: "\e600";
+	color:#DD4F24; 
+}
+.icon-f-abajo:before {
+	content: "\e601";
+}
+.icon-estrella:before {
+	content: "\e602";
+	color: #FFBE2C;
+	margin-right: .4em;
+	position:relative;
+	top: 0.2em;
+}
+.icon-lapiz:before {
+	content: "\e603";
+	margin-right: 0.8em;
+}
 a
 {
 	color: #22BCE0;
@@ -5,7 +60,7 @@ a
 body
 {
 	background: #EEEEEE;	
-	font-family: arial;
+	font-family: "open sans", sans-serif;
 	font-size: 16px;
 }
 footer
@@ -34,8 +89,8 @@ footer p:last-child:before
 	content: "-"
 }
 header
-{
-	background: #343B54;
+{	/*background:#343B54*/
+	background-image: url(posicionamiento-web2.jpg);
 	color: white;
 	overflow: hidden;
 	position: relative;
@@ -46,6 +101,8 @@ header figure
 }
 header h1
 {
+	border:1em;
+	border-color: black;
 	font-size: 1.2em;
 	font-weight: normal;
 	margin: 0 70px 0 0;
@@ -62,16 +119,36 @@ header #avatar img
 	border-radius: 50%;
 	width: 55px;
 }
+header #logo
+{
+	/*-webkit-transform:rotate(90deg);*/
+	/*-moz-transform:rotate(90deg);
+	-o-transform:rotate(90deg);
+	-ms-transform:rotate(90deg);*/
+	border-right: 1px solid white;
+	margin-right: 0.5em; 
+}
 header #logo img
 {
-	border-right: 1px solid white;
 	padding-right: 0.5em;
 	margin-right: 0.5em; 
 	width: 52px;
+	-webkit-transition:0.5s;
+	-moz-transition:0.5s;
+	-o-transition:0.5s;
+	-ms-transition:0.5s;
+
+}
+header #logo img:hover{
+	-webkit-transform:rotate(360deg);
+	-moz-transform:rotate(360deg);
+	-o-transform:rotate(360deg);
+	-ms-transform:rotate(360deg);
 }
 nav
 {
-	background: #80BCA3;
+	padding: 0 6em 0 0;
+	background: #377AC2;/*80BCA3*/
 	position: relative;
 }
 nav ul
@@ -91,6 +168,10 @@ nav ul li a
 	text-decoration: none;
 	display: block;
 	padding: 0.5em;
+	-webkit-transition:.3s;
+	-moz-transition:.3s;
+	-o-transition:.3s;
+	-ms-transition:.3s;
 }
 nav ul #publicar_nav
 {
@@ -98,14 +179,31 @@ nav ul #publicar_nav
 	right: 0;
 	top: -0.1em;
 }
+nav ul li a:hover{
+	background: #343B54;
+}
 nav ul #publicar_nav a
 {
 	background: #22BCE0;
 	border-radius: 5px;
 	box-shadow: rgba(0,0,0,0.5) 5px 5px 20px;
 	font-style: italic;
-	padding: 0.6em 0.8em;
+	padding: 0.8em 0.5em 0.8em 2.5em;
 	text-shadow: rgba(0,0,0,0.5) 2px 2px 5px;
+}
+nav ul #publicar_nav a:before
+{
+	position: absolute;
+	left: .5em;
+	top:.7em;
+}
+nav ul #publicar_nav a:hover:before
+{
+	font-size: 20px;
+}
+aside
+{
+	display: none;
 }
 #contenido
 {
@@ -139,6 +237,7 @@ nav ul #publicar_nav a
 	color: white;
 	display: inline-block;
 	padding: 0.2em 0.5em;
+	margin-bottom: 0.5em;
 	text-decoration: none;
 }
 #contenido .item .imagen_item
@@ -172,11 +271,76 @@ nav ul #publicar_nav a
 	left: 3%;
 	right: 3%;
 }
+#contenido .item .votacion a
+{
+	text-decoration: none;
+}
 #contenido .item .votacion .comentarios_item,
 #contenido .item .votacion .guardar_item
 {
 	float: right;
 }
+@media screen and (min-width: 800px){
+
+	#contenido
+	{
+		overflow: hidden;
+	}
+	#contenido .item 
+	{
+		width: 49%;
+		float: left;
+	}
+	#contenido .item:nth-child(odd){
+		margin-right: 2%;
+	}
+
+}
+
+@media screen and (min-width: 1000px){
+	aside
+	{
+		display: block;
+		float: right;
+		margin:1em;
+		width: 25%;
+	}
+	aside video
+	{
+		width: 100%;
+	}
+
+
+}
+
+
+/**
+* formulario
+*/
+
+.formulario{
+	padding: 1em;
+	text-align: right;
+	display: none;
+}
+
+.formulario input{
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	padding: 0.2em 0.6em;
+}
+
+.formulario input[type="submit"]{
+	background: #22BCE0;
+	border-color: #22BCE0;
+	box-shadow: rgba(0, 0, 0, 0.5) 5px 5px 20px;
+	font-style: italic;
+	text-shadow: rgba(0, 0, 0, 0.5) 2px 2px 5px;
+	color: white;
+}
+
+
+
 
 
 
